Bug 651595: Reinstate call to JSSourceHandler registered with JS_SetSourceHandler (r=dmandelin)